# henry-ai-engineer-course-m3

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_queries.json
data/finance_docs/: guía_de_planificación_presupuestaria_anual.md  manual_de_auditoría_y_cumplimiento_fiscal.md  política_de_gastos_corporativos_y_reembolsos.md
data/hr_docs/: guía_de_carrera_y_evaluación_de_desempeño.md  manual_de_beneficios_y_compensaciones_2026.md  protocolo_de_resolución_de_conflictos_y_código_ético.md
data/tech_docs/: arquitectura_de_microservicios_y_estándares_de_código.md  guía_de_ciberseguridad_y_manejo_de_datos_sensibles.md  manual_de_operaciones_devops_y_ci-cd.md
src/: config.py  data_generator.py  evaluator.py  vector_store.py
src/agents/: base_agent.py  finance_agent.py  hr_agent.py  orchestrator.py  tech_agent.py
src/utils/: logger.py
